Bug 1588838 - decrease "idle extended timeout" to 30 seconds r=dom-workers-and-storage-reviewers,asuth

This gives each ServiceWorker a total of 1 minute to finish doing "something"
(unless the timeout is reset by something else the ServiceWorker needs to do).
1 minute is chosen to be roughly consistent with Chrome/Safari (as opposed to
a total of 5 minutes 30 seconds).

Differential Revision: https://phabricator.services.mozilla.com/D59245

--HG--
extra : moz-landing-system : lando